# Elite-Dangerous-Rich-Presence

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  missing_ship_name.md
elite_dangerous_rich_presence/: __init__.py  event_processor.py  journal_reader.py  settings_app.py  taskbar_app.py  vessels.json
elite_dangerous_rich_presence/user_controls/: general.py
