[project]
name = "elite-dangerous-rich-presence"
version = "5.7"
description = "A standalone Discord Rich Presence application which hides in the System Tray."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "pypresence>=4.3.0",
    "pywin32>=307",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "flet>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "pyinstaller>=6.10.0",
]
